[gd_scene load_steps=8 format=3 uid="uid://b4ovocs4p5co5"]

[ext_resource type="Script" path="res://Equals.gd" id="1_ow3py"]
[ext_resource type="Texture2D" uid="uid://fexsa2bfv5oc" path="res://Cards/Equals-1.png (1).png" id="2_3igfi"]
[ext_resource type="Theme" uid="uid://b0uwx4lwuweaf" path="res://Buttons.tres" id="3_jq2ga"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hfbuk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6gq2o"]
texture = ExtResource("2_3igfi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s80fd"]
texture = ExtResource("2_3igfi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mnhwq"]
texture = ExtResource("2_3igfi")

[node name="Equals" type="Node2D" groups=["equals"]]
script = ExtResource("1_ow3py")

[node name="Button" type="Button" parent="."]
offset_left = -40.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -8.0
scale = Vector2(2.5, 2.5)
theme_override_styles/focus = SubResource("StyleBoxEmpty_hfbuk")
theme_override_styles/hover = SubResource("StyleBoxTexture_6gq2o")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s80fd")
theme_override_styles/normal = SubResource("StyleBoxTexture_mnhwq")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Quit" type="Button" parent="."]
offset_left = 456.0
offset_top = 481.0
offset_right = 681.0
offset_bottom = 606.0
theme = ExtResource("3_jq2ga")
text = "Quit
"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
